{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 46,
  "lineage": "cfddff86-b683-0102-b348-bd3c5438cfbc",
  "resources": [
    {
      "module": "module.webserver_cluster",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:930881283022:vpc/vpc-00eb5c183ab181e6f",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ddea74e9cb4757bd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-08bf3f40fbd0ca371",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00eb5c183ab181e6f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ccd6fd74cadc5c6d",
            "owner_id": "930881283022",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:930881283022:loadbalancer/app/seoul-webservers-prod/ac2394daf64b6d7b",
            "arn_suffix": "app/seoul-webservers-prod/ac2394daf64b6d7b",
            "dns_name": "seoul-webservers-prod-703964009.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:930881283022:loadbalancer/app/seoul-webservers-prod/ac2394daf64b6d7b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "seoul-webservers-prod",
            "security_groups": [
              "sg-0ab6c10f2110f53f5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-093a72a7834816674"
              },
              {
                "subnet_id": "subnet-0c7e2cb2672a2ff76"
              },
              {
                "subnet_id": "subnet-0ded7104d71cee866"
              },
              {
                "subnet_id": "subnet-0fa6e1cc1f7bce580"
              }
            ],
            "subnets": [
              "subnet-093a72a7834816674",
              "subnet-0c7e2cb2672a2ff76",
              "subnet-0ded7104d71cee866",
              "subnet-0fa6e1cc1f7bce580"
            ],
            "vpc_id": "vpc-00eb5c183ab181e6f",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "module.webserver_cluster.aws_security_group.alb",
            "module.webserver_cluster.data.aws_subnet_ids.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:930881283022:listener/app/seoul-webservers-prod/ac2394daf64b6d7b/84f8687cf99a7c62",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:930881283022:listener/app/seoul-webservers-prod/ac2394daf64b6d7b/84f8687cf99a7c62",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:930881283022:loadbalancer/app/seoul-webservers-prod/ac2394daf64b6d7b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_lb.example",
            "module.webserver_cluster.aws_security_group.alb",
            "module.webserver_cluster.data.aws_subnet_ids.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:930881283022:targetgroup/seoul-webservers-prod/98e796d3f73af7df",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:930881283022:listener-rule/app/seoul-webservers-prod/ac2394daf64b6d7b/84f8687cf99a7c62/86b5fc12f6ec0bd8",
            "condition": [
              {
                "field": "path-pattern",
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": [],
                "values": [
                  "*"
                ]
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:930881283022:listener-rule/app/seoul-webservers-prod/ac2394daf64b6d7b/84f8687cf99a7c62/86b5fc12f6ec0bd8",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:930881283022:listener/app/seoul-webservers-prod/ac2394daf64b6d7b/84f8687cf99a7c62",
            "priority": 100
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_lb.example",
            "module.webserver_cluster.aws_lb_listener.http",
            "module.webserver_cluster.aws_lb_target_group.asg",
            "module.webserver_cluster.aws_security_group.alb",
            "module.webserver_cluster.data.aws_subnet_ids.default",
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:930881283022:targetgroup/seoul-webservers-prod/98e796d3f73af7df",
            "arn_suffix": "targetgroup/seoul-webservers-prod/98e796d3f73af7df",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:930881283022:targetgroup/seoul-webservers-prod/98e796d3f73af7df",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "seoul-webservers-prod",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00eb5c183ab181e6f"
          },
          "dependencies": [
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:930881283022:security-group/sg-0ab6c10f2110f53f5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ab6c10f2110f53f5",
            "ingress": [],
            "name": "seoul-webservers-prod-alb",
            "name_prefix": null,
            "owner_id": "930881283022",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-00eb5c183ab181e6f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:930881283022:security-group/sg-093681a2547bcae08",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-093681a2547bcae08",
            "ingress": [],
            "name": "seoul-webservers-prod-instance",
            "name_prefix": null,
            "owner_id": "930881283022",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-00eb5c183ab181e6f"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4072679629",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ab6c10f2110f53f5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3308158127",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ab6c10f2110f53f5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3097254927",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-093681a2547bcae08",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_security_group.instance"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2357543097",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-093681a2547bcae08",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_security_group.instance"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_ssh_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-974069004",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-093681a2547bcae08",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webserver_cluster.aws_security_group.instance"
          ]
        }
      ]
    }
  ]
}